--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
-osx_image: xcode7.3
+osx_image: xcode8
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
+before_install:
+- gem install cocoapods --pre # for 1.1.0.rc.2  
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -project XMLPullitic/XMLPullitic.xcodeproj -scheme XMLPullitic_iOS -destination 'platform=iOS Simulator,name=iPhone 5s' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -project XMLPullitic/XMLPullitic.xcodeproj -scheme XMLPullitic_iOS -destination 'platform=iOS Simulator,name=iPhone 7' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --allow-warnings
