--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
-osx_image: xcode9
+osx_image: xcode10
 # cache: cocoapods
 # podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -project XMLPullitic/XMLPullitic.xcodeproj -scheme XMLPullitic_iOS -destination 'platform=iOS Simulator,name=iPhone 7' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -project XMLPullitic/XMLPullitic.xcodeproj -scheme XMLPullitic_iOS -destination 'platform=iOS Simulator,name=iPhone XR' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --allow-warnings
